refactor: Java 21 sequenced collections for tests
Use this link to re-run the recipe: https://app.moderne.io/builder/exBvOHwIH?organizationId=ODQ2MGExMTUtNDg0My00N2EwLTgzMGMtNGE1NGExMTBmZDkw

Co-authored-by: Moderne <team@moderne.io>